plugins {
    id 'org.springframework.boot' version '2.7.2'
    id 'io.spring.dependency-management' version '1.0.12.RELEASE'
    id 'java-library'
    id "com.github.erdi.webdriver-binaries" version "2.7"
}

group = 'cn.bobdeng.rbac'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    providedRuntime
    cucumberRuntime {
        extendsFrom testImplementation
    }
}
repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter")
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-jersey'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation("org.springframework.security:spring-security-core:5.3.2.RELEASE")
    implementation('org.flywaydb:flyway-mysql:8.5.12')
    implementation("io.jsonwebtoken:jjwt:0.9.0")
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'org.projectlombok:lombok:1.18.20'
    compileOnly 'org.projectlombok:lombok:1.18.20'
    runtimeOnly 'mysql:mysql-connector-java'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.seleniumhq.selenium:selenium-java:2.45.0'
    implementation 'org.testcontainers:mysql:1.17.2'
    implementation 'org.testcontainers:testcontainers:1.17.2'
}
tasks.named('test') {
    useJUnitPlatform()
}
task cucumber(type: JavaExec) {
    dependsOn assemble, testClasses
    main = "io.cucumber.core.cli.Main"
    classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
    environment "SPRING_PROFILES_ACTIVE", "test"
    args = ['--plugin', 'pretty', '--glue', 'com.odde', 'src/test/resources']
}
webdriverBinaries {
    chromedriver {
        version = '103.0.5060.134'
        fallbackTo32Bit = true
    }
    driverUrlsConfiguration = resources.text.fromFile('src/test/resources/webdriver_download_config.json')
    configureTask(cucumber)
}